--- a/argo/kafka-cluster.yaml
+++ b/argo/kafka-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
- name: kafka-cluster-app
+ name: kafka-cluster-argo
  namespace: argocd
 spec:
  project: default
