--- a/k8s/kafka-cluster/kafka-cluster.yaml
+++ b/k8s/kafka-cluster/kafka-cluster.yaml
@@ -3,7 +3,7 @@ kind: KafkaNodePool
 metadata:
   name: dual-role
   labels:
-    strimzi.io/cluster: sample-cluster
+    strimzi.io/cluster: kafka-cluster
 spec:
   replicas: 1
   roles:
@@ -22,7 +22,7 @@ spec:
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
-  name: sample-cluster
+  name: kafka-cluster
   annotations:
     strimzi.io/node-pools: enabled
     strimzi.io/kraft: enabled
