--- a/k8s/kafka-cluster/kafka-cluster.yaml
+++ b/k8s/kafka-cluster/kafka-cluster.yaml
@@ -15,6 +15,7 @@ spec:
       - id: 0
         type: persistent-claim
         size: 10Gi
+        class: gp2
         deleteClaim: false
         kraftMetadata: shared
 ---
