--- a/argo/kafka-cluster.yaml
+++ b/argo/kafka-cluster.yaml
@@ -14,7 +14,7 @@ spec:
    namespace: kafka
  syncPolicy:
    automated:
-     prune: true
+     prune: false
      selfHeal: true
    syncOptions:
    - CreateNamespace=true
