--- a/k8s/kafka-cluster/kafka-cluster.yaml
+++ b/k8s/kafka-cluster/kafka-cluster.yaml
@@ -3,7 +3,7 @@ kind: KafkaNodePool
 metadata:
   name: dual-role
   labels:
-    strimzi.io/cluster: kafka-cluster
+    strimzi.io/cluster: example-cluster
 spec:
   replicas: 1
   template:
@@ -29,7 +29,7 @@ spec:
 apiVersion: kafka.strimzi.io/v1beta2
 kind: Kafka
 metadata:
-  name: kafka-cluster
+  name: example-cluster
   annotations:
     strimzi.io/node-pools: enabled
     strimzi.io/kraft: enabled
